tests/compile_fail/invalid_style_layer_name_list_empty_literal.rs
use surgeist_style::StyleLayerNameList;

fn main() {
    let _list = StyleLayerNameList { names: Vec::new() };
}
